[gd_scene load_steps=16 format=3 uid="uid://b153tcsd2evxl"]

[ext_resource type="Script" path="res://assets/player/player.gd" id="1_us2ra"]
[ext_resource type="Script" path="res://assets/player/player_input.gd" id="2_lvdns"]
[ext_resource type="PackedScene" uid="uid://5h1ihyi0yj52" path="res://assets/hit area/hit_area.tscn" id="2_qjn1s"]
[ext_resource type="Script" path="res://assets/player/camera/player_camera.gd" id="3_1c552"]
[ext_resource type="PackedScene" uid="uid://dsus5wmlae3f6" path="res://assets/health/health.tscn" id="3_x7he3"]
[ext_resource type="SpriteFrames" uid="uid://cy73tmndqsq8p" path="res://assets/player/sprites/player_anim.tres" id="4_vnf4d"]
[ext_resource type="PackedScene" uid="uid://com86osgfcl14" path="res://assets/player/arm/player_arm.tscn" id="5_1as08"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="5_3vk16"]
[ext_resource type="PackedScene" uid="uid://b1pq4uppopcpp" path="res://assets/rifle/rifle.tscn" id="9_51lrv"]
[ext_resource type="PackedScene" uid="uid://bimpwb3wm0kwk" path="res://assets/pistol/pistol.tscn" id="9_54abd"]
[ext_resource type="Script" path="res://assets/player/Weapons.gd" id="9_esuap"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2vrrx"]
radius = 28.0
height = 147.19

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4n8dl"]
radius = 33.0
height = 145.79

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1iofq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Smoothing2D/AnimatedSprite2D:flip_h")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:player_id")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2uvcr"]
properties/0/path = NodePath(".:direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:running")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:mouse_from_centre")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("hit_area") groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_us2ra")
jumpingTime = 0.1
gravity = 3000
hit_area = NodePath("HitArea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.79)
shape = SubResource("CapsuleShape2D_2vrrx")

[node name="HitArea" parent="." node_paths=PackedStringArray("healt") instance=ExtResource("2_qjn1s")]
healt = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 13.105)
shape = SubResource("CapsuleShape2D_4n8dl")

[node name="Health" parent="." instance=ExtResource("3_x7he3")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1iofq")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="." node_paths=PackedStringArray("mouse_centre")]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_2uvcr")
script = ExtResource("2_lvdns")
mouse_centre = NodePath("../PlayerMouseCentre")

[node name="JumpingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="UpBufferTimer" type="Timer" parent="."]
wait_time = 0.073
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.193
one_shot = true

[node name="PlayerCamera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
position_smoothing_enabled = true
position_smoothing_speed = 8.0
script = ExtResource("3_1c552")
maxZoomOut = Vector2(200, 150)
target = NodePath("../PlayerMouseCentre")

[node name="PlayerMouseCentre" type="Marker2D" parent="."]
position = Vector2(0.035, -27.625)

[node name="Arm" parent="PlayerMouseCentre" node_paths=PackedStringArray("item_in_hand") instance=ExtResource("5_1as08")]
item_in_hand = NodePath("../../Weapons/Rifle")
arm_lenght = 60.0

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("5_3vk16")
target = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Smoothing2D"]
unique_name_in_owner = true
position = Vector2(9, -4)
scale = Vector2(2.802, 2.802)
sprite_frames = ExtResource("4_vnf4d")
animation = &"idle"
autoplay = "idle"
frame = 5
frame_progress = 0.720529
offset = Vector2(-1.2, 0)

[node name="Weapons" type="Node2D" parent="." node_paths=PackedStringArray("arm", "player_input")]
script = ExtResource("9_esuap")
arm = NodePath("../PlayerMouseCentre/Arm")
player_input = NodePath("../InputSynchronizer")

[node name="Pistol" parent="Weapons" node_paths=PackedStringArray("player_input", "player") instance=ExtResource("9_54abd")]
player_input = NodePath("../../InputSynchronizer")
player = NodePath("../..")

[node name="Rifle" parent="Weapons" node_paths=PackedStringArray("player_input", "player") instance=ExtResource("9_51lrv")]
player_input = NodePath("../../InputSynchronizer")
player = NodePath("../..")
fire_rate_delay = 0.125

[connection signal="timeout" from="JumpingTimer" to="." method="_on_jumping_timer_timeout"]
[connection signal="timeout" from="UpBufferTimer" to="." method="_on_up_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
